# dcpu

./: .gitignore  .gtkwaverc  Makefile  README.md  alu.v  blkmem.v  ctrlunit.v  dcpu.c  dcpu.h  dcpu.v  dcputest.cpp  defines.v  fetcher.v  fetchertest.cpp  load.v  loadtest.cpp  new-opcodes.txt  opcodes.txt  regfile.v  regfiletest.cpp  sim.cpp  sim.h  store.v  storetest.cpp  test.f  testbench.h  top.v
alu/: alu.v
alu/cpld/: Makefile  alu.gise  alu.prj  alu.xise  alu.xst
cmodel/: Makefile  dcpu.c  dcpu.h  sim.c  test.hex  tests.c  uart.c  uart.h
colorforth/: cf.py  convert.py  dcpu.py  notes.txt  simpledasm.py  test.cf  token.py  tokens.py
dasm/: Instruction.py  Program.py  all.asm  dasm.fs  dasm.py  disasm.fs  expr.py  grammar.py  instructions.asm  instructions.py  sammlung.fs  test.asm
dasm/vscode-ext/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
forth/: Makefile  forth.asm  forth.fs  test2.asm
fpga/: dcpu.gise  dcpu.xise
nimmodel/: dcpu.nim  forth.asm  hexfile.nim  inputreader.nim  opcodes.nim  sim.nim  test.asm  test.hex  uart.nim
regfile/: regfile.v
regfile/cpld/: Makefile  Regfile.prj  (+3 more)
rtl/: dcpu.v
sim/: .gitignore  CMakeLists.txt  Makefile  dcpu-opcodes.h  dcpu.c  dcpu.cpp  dcpu.gtkw  dcpu.h  dcpusim.cpp  forth-bak.asm  forth.asm  forth.asm.bak  sim.cpp  sim.fs  test.asm  top.v  uart.cpp  uart.h
sim/uartmaster/: UartMasterSlave.v  UartProtocol.v  fifo.v  uart_rx.v  uart_tx.v
test/: .gitignore  Makefile  test.cpp  test.h
verilog/: alu.v  dcpu.v  ram64k_16.v  regfile.v  syscon.v  top.v
(+3 files in other folders)
